# commerceos-api-client

./: .api-credentials-sample.json  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  about.json  example.api  example1.api  example2.api  requests.api
src/: main.rs
tests/: cli.rs
tests/fixtures/: array.json  lines.ndjson  requests.txt
